--- a/public/css/mystylesheet.css
+++ b/public/css/mystylesheet.css
@@ -1,10 +1,14 @@
+label.error, .error-msg{
+    font-weight: 600!important;
+    margin-bottom: 3px;
+}
 .error-msg{
-    color: #b40001;
+    color: #e62c2d;
 }
 label.error{
     border: none!important;
-    color: #b40001;
+    color: #e62c2d;
 }
 .error{
-    border: 1px solid #b40001!important;
+    border: 1px solid #e62c2d!important;
 }
